SG-2004-09-15-0: Bugfix:    fixed memory leak in the scheduler
                 Changed:   scheduler
                 Review:    DT
                 Issue:     1274
                 Bugtraq:   5102320

DT-2004-09-14-0: Bugfix:    o Fixed DRMAA-J README
                            o Fixed JavaDoc error in aimk
                            o Updated DRMAA-J JavaDocs
                 Changed:   docs, aimk

JG-2004-09-14-0: Testsuite: Improved test performance/throughput:
                            - Monitoring of qmaster communication (qping).
                            - Additional senarios:
                              - run without qstat
                              - jobs with resource requests
                              - parallel jobs with resource requests
                              - array jobs
                              - functional policy

DT-2004-09-13-1: Bugfix:    o Fixed DRMAA-J on Irix 6.5
DT-2004-09-13-1: Bugfix:    o Added libjdrmaa to LD_LIBRARYN32_PATH in
                              settings.sh|csh for Irix 6.5
                 Changed:   create_settings.sh

DT-2004-09-13-0: Bugfix:    o Fixed "delete all" bug in JAPI
                            o Fixed locking bugs in JAPI
                            o Tested DRMAA-J on all platforms
                            - No J2SE 1.4 on Tru64 5.0 and AIX 4.3
                            o Fixed attribute getter error in DRMAA-J
                            o Added drmaa.jar to CLASSPATH in settings.sh|csh
                 Changed:   JAPI, DRMAA, aimk, distinst, create_settings.sh
                 Review:    EB

SG-2004-09-13-0: Bugfix:    fixed memory leak in the scheduler
                 Changed:   scheduler
                 Review:    DT

MD-2004-09-13-0: Testsuite: - fixed install scripts message handling
                            - added new macro

JG-2004-09-09-0: Testsuite: Improved test performance/throughput: